# skeeper

./: .gitignore  LICENSE  README.md  foundry.toml  pyproject.toml  remappings.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: test.yml
script/: Skeeper.s.sol
src/: SKeeper.sol
test/: SKeeper.t.sol
test/mock/: MockToken.sol
