[project]
name = "skeeper"
version = "0.1.0"
description = "A role-based signature validator and ERC-20 token custodian implementing EIP-1271"
authors = [
    {name = "Kirill Varlamov",email = "kirill@ongrid.pro"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
